--- a/src/components/FooterLink.astro
+++ b/src/components/FooterLink.astro
@@ -3,8 +3,12 @@ interface Props {
   href: string;
 }
 
-const { href } = Astro.props
+const { href } = Astro.props;
 ---
-<a class="uppercase underline hover:no-underline focus-visible:outline focus-visible:no-underline outline-offset-4 outline-highlight-light dark:outline-highlight-dark" href={href}>
+
+<a
+  class="uppercase underline outline-offset-4 outline-highlight-light hover:no-underline focus-visible:no-underline focus-visible:outline dark:outline-highlight-dark"
+  href={href}
+>
   <slot />
 </a>
