--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -9,7 +9,8 @@ import { Icon } from "astro-icon";
       title="Github"
       href="https://github.com/tufancal"
       target="_blank"
-      rel="noreferrer"><Icon class="w-6" name="simple-icons:github" /></a>
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:github" /></a
+    >
   </li>
   <li>
     <a
@@ -17,7 +18,8 @@ import { Icon } from "astro-icon";
       title="LinkedIn"
       href="https://www.linkedin.com/in/tufan-calisir/"
       target="_blank"
-      rel="noreferrer"><Icon class="w-6" name="simple-icons:linkedin" /></a>
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:linkedin" /></a
+    >
   </li>
   <li>
     <a
@@ -25,6 +27,7 @@ import { Icon } from "astro-icon";
       title="Twitter"
       href="https://twitter.com/twofun2fun"
       target="_blank"
-      rel="noreferrer"><Icon class="w-6" name="simple-icons:twitter" /></a>
+      rel="noreferrer"><Icon class="w-6" name="simple-icons:twitter" /></a
+    >
   </li>
 </ul>
