--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,12 +1,19 @@
 <div
-	class="js-theme-toggle p-1 hover:cursor-pointer text-primary-dark bg-secondary-light rounded-full"
+  class="js-theme-toggle rounded-full bg-secondary-light p-1 text-primary-dark hover:cursor-pointer"
 >
-	<img src="/moon-filled-loop.svg" alt="Mond" data-dark width="24" height="24" />
-	<img
-		src="/sun-rising-loop.svg"
-		alt="Sonne"
-		data-light
+  <img
+    src="/moon-filled-loop.svg"
+    alt="Mond"
+    data-dark
+    width="24"
+    height="24"
+  />
+  <img
+    src="/sun-rising-loop.svg"
+    alt="Sonne"
+    data-light
     class="hidden"
-		width="24" height="24"
-	/>
+    width="24"
+    height="24"
+  />
 </div>
