--- a/src/components/BadgeLink.astro
+++ b/src/components/BadgeLink.astro
@@ -1,17 +1,17 @@
 ---
 interface Props {
-	href: string;
-	label?: string;
+  href: string;
+  label?: string;
 }
 
 const { href, label } = Astro.props;
 
-const pathName = Astro.url.pathname.split('/');
+const pathName = Astro.url.pathname.split("/");
 const urlCondition = pathName[2];
-const url = href.split('/');
+const url = href.split("/");
 ---
 
 <a
-	class=`bg-secondary-light text-xs font-RobotoCondensed mr-2 px-2.5 py-0.5 rounded-full dark:bg-secondary-dark ${url[2] === urlCondition ? 'text-highlight-light dark:text-highlight-dark' : 'text-primary-dark dark:text-primary-light'}`
-	href={href}>{label}</a
+  class=`bg-secondary-light text-xs font-RobotoCondensed mr-2 px-2.5 py-0.5 rounded-full dark:bg-secondary-dark ${url[2] === urlCondition ? 'text-highlight-light dark:text-highlight-dark' : 'text-primary-dark dark:text-primary-light'}`
+  href={href}>{label}</a
 >
