--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,25 @@
 ---
-import HeaderLink from './HeaderLink.astro';
-import MobileNavigation from './MobileNavigation.astro';
-import ThemeToggle from './ThemeToggle.astro';
-import { Icon } from 'astro-icon';
+import HeaderLink from "./HeaderLink.astro";
+import MobileNavigation from "./MobileNavigation.astro";
+import ThemeToggle from "./ThemeToggle.astro";
+import { Icon } from "astro-icon";
 ---
 
 <header
-	class="flex items-center justify-between py-4 font-medium md:py-7 lg:py-10"
+  class="flex items-center justify-between py-4 font-medium md:py-7 lg:py-10"
 >
-	<div
-		class="flex items-center justify-between w-full sm:justify-normal sm:gap-6"
-	>
-		<Icon name="logo" class="w-[100px] lg:w-[160px]" />
-		<ThemeToggle />
-	</div>
-	<nav
-		class="hidden sm:flex sm:items-center sm:justify-center sm:gap-2 md:gap-4 xl:gap-7"
-	>
-		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blog">Blog</HeaderLink>
-		<HeaderLink href="/contact">Kontakt</HeaderLink>
-	</nav>
-	<MobileNavigation />
+  <div
+    class="flex w-full items-center justify-between sm:justify-normal sm:gap-6"
+  >
+    <Icon name="logo" class="w-[100px] lg:w-[160px]" />
+    <ThemeToggle />
+  </div>
+  <nav
+    class="hidden sm:flex sm:items-center sm:justify-center sm:gap-2 md:gap-4 xl:gap-7"
+  >
+    <HeaderLink href="/">Home</HeaderLink>
+    <HeaderLink href="/blog">Blog</HeaderLink>
+    <HeaderLink href="/contact">Kontakt</HeaderLink>
+  </nav>
+  <MobileNavigation />
 </header>
