--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,13 +1,17 @@
 ---
 interface Props {
-  href: string
+  href: string;
 }
 
-const pathName = Astro.url.pathname.split('/');
-const urlCondition = '/' + pathName[1];
+const pathName = Astro.url.pathname.split("/");
+const urlCondition = "/" + pathName[1];
 
 const { href } = Astro.props;
 ---
-<a class=`font-RobotoCondensed font-bold underline uppercase hover:text-highlight-light hover:no-underline focus-visible:no-underline focus-visible:text-highlight-light focus-visible:outline-offset-4 focus-visible:outline-highlight-light focus-visible:outline dark:hover:text-highlight-dark dark:focus-visible:text-highlight-dark  dark:focus-visible:outline-highlight-dark transition-colors ease delay-100 sm:text-lg lg:text-xl xl:text-2xl ${href === urlCondition ? 'no-underline' : ''}` href={href}>
+
+<a
+  class=`font-RobotoCondensed font-bold underline uppercase hover:text-highlight-light hover:no-underline focus-visible:no-underline focus-visible:text-highlight-light focus-visible:outline-offset-4 focus-visible:outline-highlight-light focus-visible:outline dark:hover:text-highlight-dark dark:focus-visible:text-highlight-dark  dark:focus-visible:outline-highlight-dark transition-colors ease delay-100 sm:text-lg lg:text-xl xl:text-2xl ${href === urlCondition ? 'no-underline' : ''}`
+  href={href}
+>
   <slot />
 </a>
