--- a/src/components/MobileNavigationLink.astro
+++ b/src/components/MobileNavigationLink.astro
@@ -8,7 +8,11 @@ interface Props {
 
 const { href, icon } = Astro.props;
 ---
-<a class="flex flex-col items-center uppercase gap-1 font-RobotoCondensed font-bold text-sm hover:underline" href={href}>
+
+<a
+  class="flex flex-col items-center gap-1 font-RobotoCondensed text-sm font-bold uppercase hover:underline"
+  href={href}
+>
   <Icon name={icon} class="w-4" />
   <slot />
 </a>
