--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -13,7 +13,7 @@ const sortedPosts = blogPosts
 
 <Layout title="Blogartikel | Tufan Calisir">
   <Breadcrumb />
-  <h1 class="mb-6 font-RobotoCondensed text-2xl font-bold uppercase">
+  <h1 class="mb-6 font-RobotoCondensed text-2xl font-bold uppercase md:text-3xl">
     Blogartikel
   </h1>
   <TagList />
