--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,10 +31,12 @@ const lastestPost = sortedPosts[0];
 
 <Layout title="Startseite | Tufan Calisir">
   <section class="divider">
-    <h1 class="mb-3 font-RobotoCondensed text-2xl font-medium uppercase">
+    <h1
+      class="mb-3 font-RobotoCondensed text-2xl font-medium uppercase md:mb-4 md:text-3xl"
+    >
       Willkommen! 🥊
     </h1>
-    <p class="mb-3 leading-7">
+    <p class="mb-3 leading-7 md:mb-6">
       Ich bin Tufan Calisir, ein angehender Fahrzeugbau-Ingenieur mit
       Leidenschaft für Frontend-Entwicklung. Durch Ehrgeiz und Selbststudium
       habe ich umfassende Kenntnisse in HTML, CSS und JavaScript erworben. Neben
@@ -48,7 +50,7 @@ const lastestPost = sortedPosts[0];
     </div>
   </section>
   <section class="divider">
-    <h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase">
+    <h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl">
       Technologien
     </h2>
     <ul class="grid grid-cols-2 gap-2 sm:grid-cols-3 sm:gap-4">
@@ -65,7 +67,7 @@ const lastestPost = sortedPosts[0];
     </ul>
   </section>
   <section class="divider">
-    <h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase">
+    <h2 class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl">
       Letzter Blogartikel
     </h2>
     <BlogTeaserCard
