--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,40 +4,40 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('./fonts/Roboto-Regular.ttf') format('truetype');
-  src: url('./fonts/Roboto-Regular.woff2') format('woff2');
+  src: url('/fonts/Roboto-Regular.ttf') format('truetype');
+  src: url('/fonts/Roboto-Regular.woff2') format('woff2');
   font-weight: 400;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('./fonts/Roboto-Medium.ttf') format('truetype');
-  src: url('./fonts/Roboto-Medium.woff2') format('woff2');
+  src: url('/fonts/Roboto-Medium.ttf') format('truetype');
+  src: url('/fonts/Roboto-Medium.woff2') format('woff2');
   font-weight: 500;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('./fonts/Roboto-Bold.ttf') format('truetype');
-  src: url('./fonts/Roboto-Bold.woff2') format('woff2');
+  src: url('/fonts/Roboto-Bold.ttf') format('truetype');
+  src: url('/fonts/Roboto-Bold.woff2') format('woff2');
   font-weight: 700;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'RobotoCondensed';
-  src: url('./fonts/RobotoCondensed-Regular.ttf') format('truetype');
-  src: url('./fonts/RobotoCondensed-Regular.woff2') format('woff2');
+  src: url('/fonts/RobotoCondensed-Regular.ttf') format('truetype');
+  src: url('/fonts/RobotoCondensed-Regular.woff2') format('woff2');
   font-weight: 400;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'RobotoCondensed';
-  src: url('./fonts/RobotoCondensed-Bold.ttf') format('truetype');
-  src: url('./fonts/RobotoCondensed-Bold.woff2') format('woff2');
+  src: url('/fonts/RobotoCondensed-Bold.ttf') format('truetype');
+  src: url('/fonts/RobotoCondensed-Bold.woff2') format('woff2');
   font-weight: 700;
   font-display: swap;
 }
