--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,11 +3,11 @@ import SocialList from "./SocialList.astro";
 import FooterLink from "./FooterLink.astro";
 ---
 
-<footer class="flex justify-between pb-[88px] sm:pb-4">
-  <ul class="flex gap-x-2">
+<footer class="pb-[88px] sm:flex sm:justify-between sm:pb-4">
+  <ul class="mb-2 flex justify-center gap-2">
     <li><FooterLink href="/">Home</FooterLink></li>
     <li><FooterLink href="/blog">Blog</FooterLink></li>
     <li><FooterLink href="/contact">Kontakt</FooterLink></li>
   </ul>
-  <SocialList />
+  <SocialList classNames={["flex", "justify-center", "gap-2"]} />
 </footer>
