--- a/src/components/ArticleNavigation.astro
+++ b/src/components/ArticleNavigation.astro
@@ -9,38 +9,36 @@ interface Props {
 const { headlines, tldr } = Astro.props;
 ---
 
-<div class="mb-4 rounded-md bg-secondary-light p-3 dark:bg-secondary-dark sm:mb-8">
-  <h2
-    class="mb-2 font-RobotoCondensed text-xl font-medium uppercase md:mb-3 md:text-2xl"
-  >
-    Artikelnavigation
-  </h2>
-  <ol class="list-inside list-decimal">
-    {
-      headlines.map((headline) => {
-        return (
+{
+  headlines.length > 0 && (
+    <div class="mb-4 rounded-md bg-secondary-light p-3 dark:bg-secondary-dark sm:mb-8">
+      <h2 class="mb-2 font-RobotoCondensed text-xl font-medium uppercase md:mb-3 md:text-2xl">
+        Artikelnavigation
+      </h2>
+      <ol class="list-inside list-decimal">
+        {headlines.map((headline) => {
+          return (
+            <li class="mb-1">
+              <a
+                class="font-RobotoCondensed uppercase underline hover:no-underline focus-visible:no-underline focus-visible:outline focus-visible:outline-offset-2 focus-visible:outline-highlight-light dark:focus-visible:outline-highlight-dark"
+                href={`#${headline.slug}`}
+              >
+                {headline.slug}
+              </a>
+            </li>
+          );
+        })}
+        {tldr && tldr.length > 0 && (
           <li class="mb-1">
             <a
               class="font-RobotoCondensed uppercase underline hover:no-underline focus-visible:no-underline focus-visible:outline focus-visible:outline-offset-2 focus-visible:outline-highlight-light dark:focus-visible:outline-highlight-dark"
-              href={`#${headline.slug}`}
+              href="#tldr"
             >
-              {headline.slug}
+              TLDR
             </a>
           </li>
-        );
-      })
-    }
-    {
-      tldr && tldr.length > 0 && (
-        <li class="mb-1">
-          <a
-            class="font-RobotoCondensed uppercase underline hover:no-underline focus-visible:no-underline focus-visible:outline focus-visible:outline-offset-2 focus-visible:outline-highlight-light dark:focus-visible:outline-highlight-dark"
-            href="#tldr"
-          >
-            TLDR
-          </a>
-        </li>
-      )
-    }
-  </ol>
-</div>
+        )}
+      </ol>
+    </div>
+  )
+}
