fix: contact form

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,6 +16,7 @@ import FormInput from "../components/FormInput.astro";
       <textarea
         id="message"
         rows="4"
+        name="message"
         class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
         placeholder="Lass mir eine Nachricht da! 🚀" required></textarea>
     </div>
