--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,12 +1,19 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import FormInput from "../components/FormInput.astro";
+import Breadcrumb from "../components/Breadcrumb.astro";
 ---
 
 <Layout title="Kontakt | Tufan Calisir">
+  <Breadcrumb />
   <form class="divider" name="contact" method="POST" data-netlify="true">
     <FormInput name="name" type="text" label="Name" required={true} />
-    <FormInput name="email" type="email" label="E-Mail Adresse" required={true} />
+    <FormInput
+      name="email"
+      type="email"
+      label="E-Mail Adresse"
+      required={true}
+    />
     <div class="mb-6">
       <label
         for="message"
@@ -18,7 +25,22 @@ import FormInput from "../components/FormInput.astro";
         rows="4"
         name="message"
         class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500"
-        placeholder="Lass mir eine Nachricht da! 🚀" required></textarea>
+        placeholder="Lass mir eine Nachricht da! 🚀"
+        required></textarea>
+    </div>
+    <div class="mb-4 flex items-center">
+      <input
+        id="checkbox"
+        type="checkbox"
+        name="privacy-policy"
+        class="h-4 w-4 rounded border-gray-300 bg-gray-100 text-blue-600 focus:ring-2 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:ring-offset-gray-800 dark:focus:ring-blue-600"
+        required
+      />
+      <label
+        for="checkbox"
+        class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+        >Datenschutzerklärung gelesen</label
+      >
     </div>
     <button
       class="inline-flex items-center justify-center bg-highlight-light px-5 py-2 font-RobotoCondensed font-bold uppercase text-primary-light outline-offset-4 transition-colors delay-75 hover:bg-secondary-light hover:text-highlight-light focus-visible:outline focus-visible:outline-highlight-light dark:bg-highlight-dark dark:text-primary-dark dark:hover:bg-secondary-dark dark:hover:text-highlight-dark dark:focus-visible:outline-highlight-dark"
