--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,7 +1,209 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-  <h1>Datenschutzbestimmung</h1>
+<Layout title="Datenschutzerklärung">
+  <h1
+    class="mb-3 font-RobotoCondensed text-2xl font-medium uppercase md:mb-4 md:text-3xl"
+  >
+    Datenschutzerklärung
+  </h1>
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+      id="m716"
+    >
+      Präambel
+    </h2>
+    <p>
+      Mit der folgenden Datenschutzerklärung möchten wir Sie darüber aufklären,
+      welche Arten Ihrer personenbezogenen Daten (nachfolgend auch kurz als
+      "Daten“ bezeichnet) wir zu welchen Zwecken und in welchem Umfang
+      verarbeiten. Die Datenschutzerklärung gilt für alle von uns durchgeführten
+      Verarbeitungen personenbezogener Daten, sowohl im Rahmen der Erbringung
+      unserer Leistungen als auch insbesondere auf unseren Webseiten, in mobilen
+      Applikationen sowie innerhalb externer Onlinepräsenzen, wie z.B. unserer
+      Social-Media-Profile (nachfolgend zusammenfassend bezeichnet als
+      "Onlineangebot“).
+    </p>
+    <p>Die verwendeten Begriffe sind nicht geschlechtsspezifisch.</p>
+    <p>Stand: 24. August 2023</p>
+  </div>
+
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+    >
+      Inhaltsübersicht
+    </h2>
+    <ul class="index">
+      <li><a class="index-link" href="#m716">Präambel</a></li><li>
+        <a class="index-link" href="#m3">Verantwortlicher</a>
+      </li><li>
+        <a class="index-link" href="#mOverview">Übersicht der Verarbeitungen</a>
+      </li><li>
+        <a class="index-link" href="#m2427">Maßgebliche Rechtsgrundlagen</a>
+      </li><li>
+        <a class="index-link" href="#m27">Sicherheitsmaßnahmen</a>
+      </li><li>
+        <a class="index-link" href="#m12">Löschung von Daten</a>
+      </li><li>
+        <a class="index-link" href="#m15"
+          >Änderung und Aktualisierung der Datenschutzerklärung</a
+        >
+      </li>
+    </ul>
+  </div>
+
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+      id="m3"
+    >
+      Verantwortlicher
+    </h2><p>
+      Tufan Calisir<br />Willi-Hill-Weg 14<br />22547 Hamburg
+    </p>
+     E-Mail-Adresse: <p>
+      <a href="mailto:info@tufancalisir.de">info@tufancalisir.de</a>
+    </p>
+  </div>
+
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+      id="m2427"
+    >
+      Maßgebliche Rechtsgrundlagen
+    </h2><p>
+      <strong>Maßgebliche Rechtsgrundlagen nach der DSGVO:</strong>Im Folgenden
+      erhalten Sie eine Übersicht der Rechtsgrundlagen der DSGVO, auf deren
+      Basis wir personenbezogene Daten verarbeiten. Bitte nehmen Sie zur
+      Kenntnis, dass neben den Regelungen der DSGVO nationale
+      Datenschutzvorgaben in Ihrem bzw. unserem Wohn- oder Sitzland gelten
+      können. Sollten ferner im Einzelfall speziellere Rechtsgrundlagen
+      maßgeblich sein, teilen wir Ihnen diese in der Datenschutzerklärung mit.
+    </p>
+    <p>
+      <strong>Nationale Datenschutzregelungen in Deutschland:</strong>Zusätzlich
+      zu den Datenschutzregelungen der DSGVO gelten nationale Regelungen zum
+      Datenschutz in Deutschland. Hierzu gehört insbesondere das Gesetz zum
+      Schutz vor Missbrauch personenbezogener Daten bei der Datenverarbeitung
+      (Bundesdatenschutzgesetz – BDSG). Das BDSG enthält insbesondere
+      Spezialregelungen zum Recht auf Auskunft, zum Recht auf Löschung, zum
+      Widerspruchsrecht, zur Verarbeitung besonderer Kategorien
+      personenbezogener Daten, zur Verarbeitung für andere Zwecke und zur
+      Übermittlung sowie automatisierten Entscheidungsfindung im Einzelfall
+      einschließlich Profiling. Ferner können Landesdatenschutzgesetze der
+      einzelnen Bundesländer zur Anwendung gelangen.
+    </p>
+  </div>
+
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+      id="mOverview"
+    >
+      Übersicht der Verarbeitungen
+    </h2><p>
+      Die nachfolgende Übersicht fasst die Arten der verarbeiteten Daten und die
+      Zwecke ihrer Verarbeitung zusammen und verweist auf die betroffenen
+      Personen.
+    </p>
+  </div>
+
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+      id="m27"
+    >
+      Sicherheitsmaßnahmen
+    </h2><p>
+      Wir treffen nach Maßgabe der gesetzlichen Vorgaben unter Berücksichtigung
+      des Stands der Technik, der Implementierungskosten und der Art, des
+      Umfangs, der Umstände und der Zwecke der Verarbeitung sowie der
+      unterschiedlichen Eintrittswahrscheinlichkeiten und des Ausmaßes der
+      Bedrohung der Rechte und Freiheiten natürlicher Personen geeignete
+      technische und organisatorische Maßnahmen, um ein dem Risiko angemessenes
+      Schutzniveau zu gewährleisten.
+    </p>
+    <p>
+      Zu den Maßnahmen gehören insbesondere die Sicherung der Vertraulichkeit,
+      Integrität und Verfügbarkeit von Daten durch Kontrolle des physischen und
+      elektronischen Zugangs zu den Daten als auch des sie betreffenden
+      Zugriffs, der Eingabe, der Weitergabe, der Sicherung der Verfügbarkeit und
+      ihrer Trennung. Des Weiteren haben wir Verfahren eingerichtet, die eine
+      Wahrnehmung von Betroffenenrechten, die Löschung von Daten und Reaktionen
+      auf die Gefährdung der Daten gewährleisten. Ferner berücksichtigen wir den
+      Schutz personenbezogener Daten bereits bei der Entwicklung bzw. Auswahl
+      von Hardware, Software sowie Verfahren entsprechend dem Prinzip des
+      Datenschutzes, durch Technikgestaltung und durch datenschutzfreundliche
+      Voreinstellungen.
+    </p>
+    <p>
+      TLS-Verschlüsselung (https): Um Ihre via unserem Online-Angebot
+      übermittelten Daten zu schützen, nutzen wir eine TLS-Verschlüsselung. Sie
+      erkennen derart verschlüsselte Verbindungen an dem Präfix https:// in der
+      Adresszeile Ihres Browsers.
+    </p>
+  </div>
+
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+      id="m12"
+    >
+      Löschung von Daten
+    </h2><p>
+      Die von uns verarbeiteten Daten werden nach Maßgabe der gesetzlichen
+      Vorgaben gelöscht, sobald deren zur Verarbeitung erlaubten Einwilligungen
+      widerrufen werden oder sonstige Erlaubnisse entfallen (z.B. wenn der Zweck
+      der Verarbeitung dieser Daten entfallen ist oder sie für den Zweck nicht
+      erforderlich sind). Sofern die Daten nicht gelöscht werden, weil sie für
+      andere und gesetzlich zulässige Zwecke erforderlich sind, wird deren
+      Verarbeitung auf diese Zwecke beschränkt. D.h., die Daten werden gesperrt
+      und nicht für andere Zwecke verarbeitet. Das gilt z.B. für Daten, die aus
+      handels- oder steuerrechtlichen Gründen aufbewahrt werden müssen oder
+      deren Speicherung zur Geltendmachung, Ausübung oder Verteidigung von
+      Rechtsansprüchen oder zum Schutz der Rechte einer anderen natürlichen oder
+      juristischen Person erforderlich ist.
+    </p>
+    <p>
+      Unsere Datenschutzhinweise können ferner weitere Angaben zu der
+      Aufbewahrung und Löschung von Daten beinhalten, die für die jeweiligen
+      Verarbeitungen vorrangig gelten.
+    </p>
+  </div>
+
+  <div class="divider">
+    <h2
+      class="mb-3 font-RobotoCondensed text-xl font-medium uppercase md:mb-4 md:text-2xl"
+      id="m15"
+    >
+      Änderung und Aktualisierung der Datenschutzerklärung
+    </h2><p>
+      Wir bitten Sie, sich regelmäßig über den Inhalt unserer
+      Datenschutzerklärung zu informieren. Wir passen die Datenschutzerklärung
+      an, sobald die Änderungen der von uns durchgeführten Datenverarbeitungen
+      dies erforderlich machen. Wir informieren Sie, sobald durch die Änderungen
+      eine Mitwirkungshandlung Ihrerseits (z.B. Einwilligung) oder eine sonstige
+      individuelle Benachrichtigung erforderlich wird.
+    </p>
+    <p>
+      Sofern wir in dieser Datenschutzerklärung Adressen und
+      Kontaktinformationen von Unternehmen und Organisationen angeben, bitten
+      wir zu beachten, dass die Adressen sich über die Zeit ändern können und
+      bitten die Angaben vor Kontaktaufnahme zu prüfen.
+    </p>
+  </div>
+
+  <p class="seal divider">
+    <a
+      href="https://datenschutz-generator.de/"
+      title="Rechtstext von Dr. Schwenke - für weitere Informationen bitte anklicken."
+      target="_blank"
+      rel="noopener noreferrer nofollow"
+      >Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas Schwenke</a
+    >
+  </p>
 </Layout>
