--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -6,7 +6,7 @@ const filteredPath = pathName.split("/").filter((path) => path);
 let lastPath: string | null = null;
 ---
 
-<nav class="mb-3 flex" aria-label="Breadcrumb">
+<nav class="mb-3 flex md:mb-8" aria-label="Breadcrumb">
   <ol class="inline-flex items-center space-x-1 md:space-x-3">
     <li class="inline-flex items-center">
       <a
