--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,6 +13,7 @@ import { Icon } from "astro-icon";
   >
     <a
       href="/"
+      title="Startseite | Tufan Calisir"
       class="focus-visible:outline focus-visible:outline-offset-8 focus-visible:outline-highlight-light dark:focus-visible:outline-highlight-dark"
     >
       <Icon name="logo" class="w-[100px] lg:w-[160px]" />
