--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,10 @@
 ---
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-import '../styles/main.css';
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+import "../styles/main.css";
 
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -12,22 +12,47 @@ const { title } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="de" class="scroll-smooth">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body class="font-Roboto bg-primary-light text-primary-dark dark:bg-primary-dark dark:text-primary-light">
-		<main class="mx-auto px-4 max-w-5xl md:px-8">
-			<Header />
-			<slot />
-			<Footer />
-		</main>
-		<script>
-			import '../js/index';
-		</script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Entdecken Sie die spannende Welt des Quereinstiegs in die Frontend-Entwicklung auf unserem Tech Blog. Erfahren Sie, wie Sie Ihre bisherigen Fähigkeiten nutzen können, um ein erfolgreicher Frontend-Entwickler zu werden. Erhalten Sie wertvolle Einblicke, Ressourcen und Tipps, um den Übergang reibungslos zu gestalten und in der dynamischen Tech-Branche Fuß zu fassen."
+    />
+    <meta property="og:title" content="Startseite | Tufan Calisir" />
+    <meta property="twitter:title" content="Startseite | Tufan Calisir" />
+    <meta
+      property="og:description"
+      content="Entdecken Sie die spannende Welt des Quereinstiegs in die Frontend-Entwicklung auf unserem Tech Blog. Erfahren Sie, wie Sie Ihre bisherigen Fähigkeiten nutzen können, um ein erfolgreicher Frontend-Entwickler zu werden. Erhalten Sie wertvolle Einblicke, Ressourcen und Tipps, um den Übergang reibungslos zu gestalten und in der dynamischen Tech-Branche Fuß zu fassen."
+    />
+    <meta
+      property="twitter:description"
+      content="Entdecken Sie die spannende Welt des Quereinstiegs in die Frontend-Entwicklung auf unserem Tech Blog. Erfahren Sie, wie Sie Ihre bisherigen Fähigkeiten nutzen können, um ein erfolgreicher Frontend-Entwickler zu werden. Erhalten Sie wertvolle Einblicke, Ressourcen und Tipps, um den Übergang reibungslos zu gestalten und in der dynamischen Tech-Branche Fuß zu fassen."
+    />
+    <meta
+      name="keywords"
+      content="Techblog Quereinstieg,
+		Frontend Entwickler werden,
+		Quereinstieg in die Frontend Entwicklung,
+		Tech Karriere Umschulung,
+		Erfolgreicher Quereinstieg als Frontend Entwickler,
+		Tipps für Quereinsteiger im Tech Bereich,
+		Ressourcen für Frontend Quereinsteiger"
+    />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body
+    class="bg-primary-light font-Roboto text-primary-dark dark:bg-primary-dark dark:text-primary-light"
+  >
+    <main class="mx-auto max-w-5xl px-4 md:px-8">
+      <Header />
+      <slot />
+      <Footer />
+    </main>
+    <script>
+      import "../js/index";
+    </script>
+  </body>
 </html>
