--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,11 @@ const { title } = Astro.props;
 		Tipps für Quereinsteiger im Tech Bereich,
 		Ressourcen für Frontend Quereinsteiger"
     />
+		<link rel="canonical" href="https://tufancalisir.de/">
+		<meta property="og:url" content="https://tufancalisir.de/">
+		<meta property="twitter:url" content="https://tufancalisir.de/">
+		<meta property="og:image" name="image" content="/share-image.jpg">
+		<meta property="twitter:image" content="/share-image.jpg">
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
