--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,7 +11,7 @@ const sortedPosts = blogPosts
   .reverse();
 ---
 
-<Layout title="Blogartikel | Tufan Calisir">
+<Layout title="Blogartikel | Tufan Calisir" description="Stöbern Sie durch unsere vielfältige Sammlung von Blogartikeln zu den neuesten Technologietrends, Tipps und Einblicken. Tauchen Sie ein und entdecken Sie fesselnde Inhalte, die Ihre Neugier wecken werden.">
   <Breadcrumb />
   <h1 class="mb-6 font-RobotoCondensed text-2xl font-bold uppercase md:text-3xl">
     Blogartikel
