--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import FormInput from "../components/FormInput.astro";
 import Breadcrumb from "../components/Breadcrumb.astro";
 ---
 
-<Layout title="Kontakt | Tufan Calisir">
+<Layout title="Kontakt | Tufan Calisir" description="Kontaktieren Sie mich mühelos über meine Kontaktseite. Teilen Sie Fragen, Anregungen oder Kooperationsideen!">
   <Breadcrumb />
   <form class="divider" name="contact" method="POST" data-netlify="true">
     <FormInput name="name" type="text" label="Name" required={true} />
