--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -7,22 +7,11 @@ interface Props {
 const { href, target } = Astro.props;
 ---
 
-{
-  target ? (
-    <a
-      class="inline-flex items-center justify-center bg-highlight-light px-5 py-2 font-RobotoCondensed font-bold uppercase text-primary-light outline-offset-4 transition-colors delay-75 hover:bg-secondary-light hover:text-highlight-light focus-visible:outline focus-visible:outline-highlight-light dark:bg-highlight-dark dark:text-primary-dark dark:hover:bg-secondary-dark dark:hover:text-highlight-dark dark:focus-visible:outline-highlight-dark"
-      href={href}
-      target="_blank"
-      rel="noreferrer"
-    >
-      <slot />
-    </a>
-  ) : (
-    <a
-      class="inline-flex items-center justify-center bg-highlight-light px-5 py-2 font-RobotoCondensed font-bold uppercase text-primary-light outline-offset-4 transition-colors delay-75 hover:bg-secondary-light hover:text-highlight-light focus-visible:outline focus-visible:outline-highlight-light dark:bg-highlight-dark dark:text-primary-dark dark:hover:bg-secondary-dark dark:hover:text-highlight-dark dark:focus-visible:outline-highlight-dark"
-      href={href}
-    >
-      <slot />
-    </a>
-  )
-}
+<a
+  class="inline-flex items-center justify-center bg-highlight-light px-5 py-2 font-RobotoCondensed font-bold uppercase text-primary-light outline-offset-4 transition-colors delay-75 hover:bg-secondary-light hover:text-highlight-light focus-visible:outline focus-visible:outline-highlight-light dark:bg-highlight-dark dark:text-primary-dark dark:hover:bg-secondary-dark dark:hover:text-highlight-dark dark:focus-visible:outline-highlight-dark"
+  href={href}
+  target={target ? "_blank" : undefined}
+  rel={target ? "noreferrer noopener" : undefined}
+>
+  <slot />
+</a>
