--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,13 +2,14 @@
 interface Props {
   href: string;
   target?: boolean;
+  style?: 'primary' | 'secondary'
 }
 
-const { href, target } = Astro.props;
+const { href, target, style = 'primary' } = Astro.props;
 ---
 
 <a
-  class="inline-flex items-center justify-center bg-highlight-light px-5 py-2 font-RobotoCondensed font-bold uppercase text-primary-light outline-offset-4 transition-colors delay-75 hover:bg-secondary-light hover:text-highlight-light focus-visible:outline focus-visible:outline-highlight-light dark:bg-highlight-dark dark:text-primary-dark dark:hover:bg-secondary-dark dark:hover:text-highlight-dark dark:focus-visible:outline-highlight-dark"
+  class={`${style === 'primary' ? 'btn-primary' : 'btn-secondary'}`}
   href={href}
   target={target ? "_blank" : undefined}
   rel={target ? "noreferrer noopener" : undefined}
